--- a/CarMedia/CarMedia/Music.xaml
+++ b/CarMedia/CarMedia/Music.xaml
@@ -35,7 +35,8 @@
             <StackPanel DockPanel.Dock="Top">
             <TextBlock Name="txtSongs" Text="Songs" MouseDown="txtSongs_MouseDown" Style="{StaticResource MenuTextStyle}"/>
             <TextBlock Name="txtAlbums" Text="Albums" MouseDown="txtAlbums_MouseDown" Style="{StaticResource MenuTextStyle}"/>
-            <TextBlock Name="txtArtists" Text="Artists" Style="{StaticResource MenuTextStyle}"/>
+            <TextBlock Name="txtArtists" Text="Artists" MouseDown="txtArtists_MouseDown" Style="{StaticResource MenuTextStyle}"/>
+                <Button x:Name="btnNowPlaying" Content="Now Playing" Margin="5,0" Click="btnNowPlaying_Click"></Button>
             </StackPanel>
             <Image x:Name="imgAlbumArt" VerticalAlignment="Bottom" Margin="5"/>
         </DockPanel>
@@ -56,43 +57,6 @@
         </StackPanel>            
             </Grid>
         <ListBox x:Name="lbxAllTracks" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Width="700" Height="380" ScrollViewer.VerticalScrollBarVisibility="Hidden" Opacity="0.7" Background="#D8000000" SelectionChanged="lbxAllTracks_SelectionChanged"></ListBox>
-        <!--<ListView x:Name="lvSongs" Grid.RowSpan="2" Visibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Hidden" Grid.Row="1" Grid.Column="1" Margin="0,10,15,10" SelectionChanged="lvSongs_SelectionChanged" Opacity="0.7" Background="#D8000000" >
-            --><!--<GridView>--><!--
-            <ListView.View>
-                <GridView>
-                    
-                    <GridViewColumn x:Name="songName">
-                        <GridViewColumnHeader Visibility="Hidden"></GridViewColumnHeader>
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock x:Name="Txt" FontSize="28" Text="{Binding TrackName}" Margin="0,10" VerticalAlignment="Bottom"  Foreground="White" />
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                    
-                    --><!--<GridViewColumn x:Name="album" DisplayMemberBinding="{Binding Artist.AlbumName}" />--><!--                    
-                    <GridViewColumn x:Name="artist">
-                        <GridViewColumnHeader Visibility="Hidden"></GridViewColumnHeader>
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock x:Name="Txt" FontSize="18" Text="{Binding Artist.ArtistName}" Margin="0,10" VerticalAlignment="Bottom" Foreground="CornflowerBlue" />
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                            --><!--<DataTemplate>
-                                <TextBlock Text="{Binding artist}" TextDecorations="Underline" Foreground="Blue" Cursor="Hand" />
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>--><!--
-                    </GridViewColumn>
-                    
-                </GridView>
-            </ListView.View>-->
-            <!--<GridViewColumn x:Name="Col1" Header="Name" Width="100" DisplayMemberBinding="{Binding Name}"/>
-                <GridViewColumn x:Name="Col2" Header="Age" Width="100" DisplayMemberBinding="{Binding Age}"/>
-                <GridViewColumn x:Name="Col3" Header="Mail" Width="100" DisplayMemberBinding="{Binding Mail}"/>-->
-                <!--<GridViewColumn x:Name="Col4" Width="150" DisplayMemberBinding="{Binding Col5}"/>
-                <GridViewColumn x:Name="Col5" Width="150" DisplayMemberBinding="{Binding Col5}"/>-->
-            <!--</GridView>-->            
-        <!--</ListView>-->
         <ScrollViewer Name="scvAlbums" Visibility="Hidden" Grid.RowSpan="2" Grid.Column="1" Grid.Row="1" Width="700" Height="380" VerticalScrollBarVisibility="Hidden">
             <!--<Grid>
                 <Grid.ColumnDefinitions>
@@ -113,6 +77,8 @@
             </Grid>-->
         </ScrollViewer>
         <ListBox x:Name="lbxAlbumsTracks" Grid.RowSpan="2" Grid.Column="1" Grid.Row="1" Width="700" Height="380" Visibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" Opacity="0.7" Background="#D8000000" SelectionChanged="lbxAlbumsTracks_SelectionChanged"></ListBox>
+        <ListBox x:Name="lbxArtists" Grid.RowSpan="2" Grid.Column="1" Grid.Row="1" Width="700" Height="380"  ScrollViewer.VerticalScrollBarVisibility="Hidden" Opacity="0.7" Visibility="Hidden" Background="#D8000000" SelectionChanged="lbxArtists_SelectionChanged"></ListBox>
+        <ListBox x:Name="lbxArtistsTracks" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Width="700" Height="380" Visibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" Opacity="0.7" Background="#D8000000" SelectionChanged="lbxArtistsTracks_SelectionChanged"></ListBox>
         <StackPanel Name="spPlayControls" Visibility="Hidden" Grid.Column="1" Grid.Row="2" Margin="0,10,0,0">
             <!--<StackPanel Orientation="Horizontal">-->
             <Grid>
