--- a/CarMedia/CarMedia/Music.xaml
+++ b/CarMedia/CarMedia/Music.xaml
@@ -33,10 +33,11 @@
         </Grid.ColumnDefinitions>
         <DockPanel Grid.RowSpan="3" Background="Gray" Width="100" HorizontalAlignment="Left" Margin="12">
             <StackPanel DockPanel.Dock="Top">
-            <TextBlock Name="txtSongs" Text="Songs" MouseDown="txtSongs_MouseDown" Style="{StaticResource MenuTextStyle}"/>
-            <TextBlock Name="txtAlbums" Text="Albums" MouseDown="txtAlbums_MouseDown" Style="{StaticResource MenuTextStyle}"/>
-            <TextBlock Name="txtArtists" Text="Artists" MouseDown="txtArtists_MouseDown" Style="{StaticResource MenuTextStyle}"/>
-                <Button x:Name="btnNowPlaying" Content="Now Playing" Margin="5,0" Click="btnNowPlaying_Click"></Button>
+                <TextBlock Name="txtSongs" Text="Songs" MouseDown="txtSongs_MouseDown" Style="{StaticResource MenuTextStyle}"/>
+                <TextBlock Name="txtAlbums" Text="Albums" MouseDown="txtAlbums_MouseDown" Style="{StaticResource MenuTextStyle}"/>
+                <TextBlock Name="txtArtists" Text="Artists" MouseDown="txtArtists_MouseDown" Style="{StaticResource MenuTextStyle}"/>
+                <Button x:Name="btnPlaylists" Content="Playlists" Margin="5,0" Click="btnPlaylists_Click"></Button>
+                <Button x:Name="btnNowPlaying" Content="Now Playing" Margin="5,0" Click="btnNowPlaying_Click"></Button>                
             </StackPanel>
             <Image x:Name="imgAlbumArt" VerticalAlignment="Bottom" Margin="5"/>
         </DockPanel>
@@ -77,8 +78,8 @@
             </Grid>-->
         </ScrollViewer>
         <ListBox x:Name="lbxAlbumsTracks" Grid.RowSpan="2" Grid.Column="1" Grid.Row="1" Width="700" Height="380" Visibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" Opacity="0.7" Background="#D8000000" SelectionChanged="lbxAlbumsTracks_SelectionChanged"></ListBox>
-        <ListBox x:Name="lbxArtists" Grid.RowSpan="2" Grid.Column="1" Grid.Row="1" Width="700" Height="380"  ScrollViewer.VerticalScrollBarVisibility="Hidden" Opacity="0.7" Visibility="Hidden" Background="#D8000000" SelectionChanged="lbxArtists_SelectionChanged"></ListBox>
-        <ListBox x:Name="lbxArtistsTracks" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Width="700" Height="380" Visibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" Opacity="0.7" Background="#D8000000" SelectionChanged="lbxArtistsTracks_SelectionChanged"></ListBox>
+        <ListBox x:Name="lbxArtists" Grid.RowSpan="2" Grid.Column="1" Grid.Row="1" Width="700" Height="380"  ScrollViewer.VerticalScrollBarVisibility="Hidden" Opacity="0.7" Visibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Hidden" Background="#D8000000" SelectionChanged="lbxArtists_SelectionChanged"></ListBox>
+        <ListBox x:Name="lbxArtistsTracks" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Width="700" Height="380" Visibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Hidden" Opacity="0.7" Background="#D8000000" SelectionChanged="lbxArtistsTracks_SelectionChanged"></ListBox>
         <StackPanel Name="spPlayControls" Visibility="Hidden" Grid.Column="1" Grid.Row="2" Margin="0,10,0,0">
             <!--<StackPanel Orientation="Horizontal">-->
             <Grid>
@@ -103,5 +104,31 @@
                 <Button x:Name="btnFavorite" Margin="25,10,0,0" Height="40" Width="60">Favorite</Button>
             </StackPanel>
         </StackPanel>
+        <ListBox x:Name="lbxPlaylists" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Width="700" Height="380" Visibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Hidden" Opacity="0.7" Background="#D8000000" FontSize="28" Foreground="White" Margin="0,0,0,15" MouseUp="lbxPlaylists_MouseUp">
+            <StackPanel Orientation="Horizontal">
+                <RichTextBox>
+                    <RichTextBox.ContextMenu>
+                        <ContextMenu Name="ctxMenu">
+                            <MenuItem Command="Cut">
+                                <!--<MenuItem.Icon>
+                                    <Image Source="Images/cut.png" />
+                                </MenuItem.Icon>-->
+                            </MenuItem>
+                            <MenuItem Command="Copy">
+                                <!--<MenuItem.Icon>
+                                    <Image Source="Images/copy.png" />
+                                </MenuItem.Icon>-->
+                            </MenuItem>
+                            <MenuItem Command="Paste">
+                                <!--<MenuItem.Icon>
+                                    <Image Source="Images/paste.png" />
+                                </MenuItem.Icon>-->
+                            </MenuItem>
+                        </ContextMenu>
+                    </RichTextBox.ContextMenu>
+                </RichTextBox>
+            </StackPanel>
+        </ListBox>
+        <ListBox x:Name="lbxPlaylistsTracks" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Width="700" Height="380" Visibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Hidden" Opacity="0.7" Background="#D8000000" FontSize="28" Foreground="White" Margin="0,0,0,15" SelectionChanged="lbxPlaylistsTracks_SelectionChanged"/>
     </Grid>
 </UserControl>
