--- a/CarMedia/CarMedia/Music.xaml
+++ b/CarMedia/CarMedia/Music.xaml
@@ -6,7 +6,8 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
       Background="Transparent"
-      Width="935" Height="465" MaxHeight="465">
+      Width="935" Height="465" MaxHeight="465" 
+             FocusManager.FocusedElement="{Binding RelativeSource={x:Static RelativeSource.Self}, Mode=OneTime}">
     
     <UserControl.Resources>
         <Style x:Key="MenuTextStyle">
@@ -31,7 +32,7 @@
             <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="9*"/>
         </Grid.ColumnDefinitions>
-        <DockPanel Grid.RowSpan="3" Background="Gray" Width="100" HorizontalAlignment="Left" Margin="12">
+        <DockPanel x:Name="dpButtonsColumn" Grid.RowSpan="3" Background="Gray" Width="100" HorizontalAlignment="Left" Margin="12">
             <StackPanel DockPanel.Dock="Top">
                 <TextBlock Name="txtSongs" Text="Songs" MouseDown="txtSongs_MouseDown" Style="{StaticResource MenuTextStyle}"/>
                 <TextBlock Name="txtAlbums" Text="Albums" MouseDown="txtAlbums_MouseDown" Style="{StaticResource MenuTextStyle}"/>
@@ -104,31 +105,29 @@
                 <Button x:Name="btnFavorite" Margin="25,10,0,0" Height="40" Width="60">Favorite</Button>
             </StackPanel>
         </StackPanel>
-        <ListBox x:Name="lbxPlaylists" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Width="700" Height="380" Visibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Hidden" Opacity="0.7" Background="#D8000000" FontSize="28" Foreground="White" Margin="0,0,0,15" MouseUp="lbxPlaylists_MouseUp">
-            <StackPanel Orientation="Horizontal">
-                <RichTextBox>
-                    <RichTextBox.ContextMenu>
-                        <ContextMenu Name="ctxMenu">
-                            <MenuItem Command="Cut">
-                                <!--<MenuItem.Icon>
+        <ListBox x:Name="lbxPlaylists" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Width="700" Height="380" FontSize="28" Visibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Hidden" Opacity="0.7" Background="#D8000000" Foreground="White" MouseUp="lbxPlaylists_MouseUp"  SelectionChanged="lbxPlaylists_SelectionChanged">
+            <StackPanel Orientation="Horizontal" ContextMenuService.ShowOnDisabled="True">
+                <StackPanel.ContextMenu>
+                    <ContextMenu Name="ctxMenu">
+                        <MenuItem Header="Delete" Click="CtxMenuDelete_Click" >
+                            <!--<MenuItem.Icon>
                                     <Image Source="Images/cut.png" />
                                 </MenuItem.Icon>-->
-                            </MenuItem>
-                            <MenuItem Command="Copy">
-                                <!--<MenuItem.Icon>
+                        </MenuItem>
+                        <!--<MenuItem Command="Delete"-->
+                        <!--<MenuItem.Icon>
                                     <Image Source="Images/copy.png" />
                                 </MenuItem.Icon>-->
-                            </MenuItem>
-                            <MenuItem Command="Paste">
-                                <!--<MenuItem.Icon>
+                        <!--</MenuItem>-->
+                        <!--<MenuItem Comman d="Paste">-->
+                        <!--<MenuItem.Icon>
                                     <Image Source="Images/paste.png" />
-                                </MenuItem.Icon>-->
-                            </MenuItem>
-                        </ContextMenu>
-                    </RichTextBox.ContextMenu>
-                </RichTextBox>
+                                </MenuItem.Icon>
+                        </MenuItem>-->
+                    </ContextMenu>
+                </StackPanel.ContextMenu>
             </StackPanel>
         </ListBox>
-        <ListBox x:Name="lbxPlaylistsTracks" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Width="700" Height="380" Visibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Hidden" Opacity="0.7" Background="#D8000000" FontSize="28" Foreground="White" Margin="0,0,0,15" SelectionChanged="lbxPlaylistsTracks_SelectionChanged"/>
+        <ListBox x:Name="lbxPlaylistsTracks" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Width="700" Height="380" FontSize="28" Visibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Hidden" Opacity="0.7" Background="#D8000000" Foreground="White" SelectionChanged="lbxPlaylistsTracks_SelectionChanged"/>
     </Grid>
 </UserControl>
